# Speedy2D

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml  shell.nix
.github/: FUNDING.yml
.github/workflows/: build.yml
examples/: animation.rs  fixed_resolution.rs  hello_world.rs  image_load.rs  input_callbacks.rs  load_image.rs  managing_context.rs  mouse_grab.rs  mouse_passthrough.rs  moving_text.rs  stretching_window.rs  user_events.rs
examples/webgl/: Cargo.toml  index.html
examples/webgl/src/: buttons.rs  main.rs
src/: color.rs  dimen.rs  error.rs  font.rs  font_cache.rs  glbackend.rs  glwrapper.rs  image.rs  lib.rs  numeric.rs  renderer2d.rs  shape.rs  texture_packer.rs  time.rs  utils.rs  web.rs  window.rs  window_internal_doctest.rs  window_internal_glutin.rs  window_internal_web.rs
src/glutin_winit/: mod.rs  window.rs
src/shaders/: r2d_fragment.glsl  r2d_fragment_v300es.glsl  r2d_vertex_v110.glsl  r2d_vertex_v300es.glsl
test/: main.rs
