[package]
name = "speedy2d"
version = "3.0.0"
authors = ["QuantumBadger <speedy2d@redreader.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = """
Hardware-accelerated drawing of shapes, images, and text, with an easy to use
API. Speedy2D aims to be the simplest Rust API for creating a window, rendering graphics,
and handling input.
"""
keywords = ["opengl", "gamedev", "graphics", "font"]
categories = ["rendering::graphics-api", "game-development", "graphics"]
repository = "https://github.com/QuantumBadger/Speedy2D"
documentation = "https://docs.rs/speedy2d"

[features]
default = ["windowing", "image-loading"]

# Windowing support via winit + glutin.
windowing = [
    "glutin",
    "winit",
    "raw-window-handle",
    # Enable common desktop backends on supported targets.
    "winit/x11",
    "winit/wayland",
    "glutin/x11",
    "glutin/wayland",
    "glutin/egl",
    "glutin/glx",
    "glutin/wgl",
]
image-loading = ["image"]

[dependencies]
glow = "0.7"
log = "0.4"
backtrace = "0.3"
rusttype = { version = "0.9" }
unicode-normalization = "0.1"
num-traits = "0.2"
earcutr = "0.2.0"
smallvec = "1.9.0"

# For image_loading feature
image = { version = "0.23", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# For windowing feature
glutin = { version = "0.31.3", optional = true }
winit = { version = "0.29.2", optional = true, default-features = false, features = ["rwh_05"] }
raw-window-handle = { version = "0.5.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[target.'cfg(any(doc, doctest, target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3.77"
features = [
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "DomRect",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "WheelEvent",
    "Performance",
    "WebGl2RenderingContext",
    "Window",
]

[build-dependencies.cfg_aliases]
version = "0.1.1"

# Tests using a headless GL context.

[[test]]
name = "test"
path = "test/main.rs"
harness = false
required-features = ["windowing"]

[dev-dependencies]
simple_logger = { version = "1.11", default-features = false, features = ["colors"] }
image = { version = "0.23" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Used by `test/main.rs` (headless GL integration test). Kept as a dev-dependency
# so it doesn't become part of Speedy2D's public API surface.
glutin-winit = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2" }

# Examples: must be listed manually as they require the "windowing" feature.

[[example]]
name = "hello_world"
required-features = ["windowing"]

[[example]]
name = "managing_context"
required-features = ["windowing"]

[[example]]
name = "user_events"
required-features = ["windowing"]

[[example]]
name = "input_callbacks"
required-features = ["windowing"]

[[example]]
name = "animation"
required-features = ["windowing"]

[[example]]
name = "load_image"
required-features = ["windowing", "image-loading"]

[[example]]
name = "mouse_grab"
required-features = ["windowing"]

[[example]]
name = "moving_text"
required-features = ["windowing"]

[workspace]
members = [
    "examples/webgl",
]
